# ImmichSyncRUST

./: .gitignore  Cargo.toml
src/: main.rs
